# PollZone

./: .gitattributes  .gitignore  BigButton.cpp  BigButton.h  CMakeLists.txt  PollZone.ino  README.md  config.h  plot_board.py
Box/: NOTES.md  PollZone.fcstd  box-2016-08-22.dxf  box-2016-08-23.dxf  box-2016-08-23.dxf.wcvr  box-2016-08-25.dxf  box-2016-08-25.dxf.wcvr  box.dxf
PollZone/: Buttons.h  Cfg.cpp  Cfg.h  PollButton.cpp  PollButton.h  PollClient.cpp  PollClient.h  PollState.cpp  PollState.h  PollZone.ino  config.h  schematic-v4.h  schematic-v5.h  utils.h
schematic/: nodemcu.lib  pollbox.kicad_pcb  pollbox.lib  pollbox.net  pollbox.pro
schematic-v3/: fp-lib-table  pollbox-rescue.lib  pollbox.cmp  pollbox.kicad_pcb  pollbox.net
schematic-v3/nodemcu.pretty/: NodeMCU.kicad_mod  NodeMCU_oval_pads.kicad_mod  ULN2803.kicad_mod  ULN2803_oval_pads.kicad_mod  capasit_mod.kicad_mod  connector_2_mod.kicad_mod  connector_mod.kicad_mod  res_mod.kicad_mod
schematic-v4/: CMakeLists.txt  pollbox.dsn  pollbox.kicad_pcb  pollbox.net  pollbox.sch  pollbox.ses
schematic-v4/gerber/: pollbox-B.Cu.gbr  pollbox-Edge.Cuts.gbr
schematic-v4/nodemcu.pretty/: NodeMCU_wide_2.kicad_mod
schematic-v4/ps/: pollbox-B.Cu.ps  pollbox-Edge.Cuts.ps
schematic-v5/: CMakeLists.txt  nodemcu.lib  pollbox.cmp  pollbox.kicad_pcb  pollbox.lib  pollbox.net  pollbox.pro  pollbox.sch
schematic-v5/gerber/: pollbox-B.Cu.gbr  pollbox-B.Mask.gbr  pollbox-B.Paste.gbr  pollbox-B.SilkS.gbr  pollbox-Dwgs.User.gbr  pollbox-Eco1.User.gbr  pollbox-Eco2.User.gbr  pollbox-Edge.Cuts.gbr  pollbox-F.CrtYd.gbr  pollbox-F.Fab.gbr  pollbox-F.Mask.gbr  pollbox-F.Paste.gbr  pollbox-F.SilkS.gbr  pollbox-Margin.gbr  pollbox-NPTH.drl  pollbox.drl
schematic-v5/nodemcu.pretty/: NodeMCU.kicad_mod  NodeMCU_wide_2.kicad_mod
